[package]
name = "degen_launch"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "degen_launch"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "=1.17.22"

# Use a specific branch of whirlpool-cpi that should be compatible with Anchor 0.29.0
whirlpool-cpi = { git = "https://github.com/orca-so/whirlpool-cpi.git", features = ["cpi"], branch = "anchor/0.29.0" }
bytemuck = "=1.16.3"